[package]
name = "sysmonitor-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
gethostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
wasmbus-rpc = { version = "0.13", features = ["otel"] }
wasmcloud-interface-sysmonitor = { path = "../interface/rust" }
uuid = { version = "1", features = ["v4"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.8"

[[bin]]
name = "sysmonitor_basic"
path = "src/main.rs"
